tests/ui/unknown_type.stderr
Error [E0119]: there's no type called `Strng`
  --> tests/ui/unknown_type.jet:2:12
    |
  2 |     val x: Strng = "hi";
    |            ^^^^^
 Why: the types are `Int`, `Float`, `Bool`, and `String` (plus types you define)
 Fix: check the spelling, or define the struct or enum first
