tests/ui/unknown_type.lex
fn main() {
    val x: Strng = "hi";
    print(x);
}
